:construction: Just check what all is okay for start

--- a/words.html
+++ b/words.html
@@ -3,19 +3,19 @@
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="meta_title">
-The Evolution of Trust
+Эволюция доверия
 </p>
 <p id="meta_desc">
-an interactive guide to the game theory of why &amp; how we trust each other
+интерактивный путеводитель по теории игр, почему и как мы доверяем друг другу
 </p>
 <p id="meta_loading">
-loading...
+загрузка...
 </p>
 <p id="meta_on">
-ON
+ВКЛ
 </p>
 <p id="meta_off">
-OFF
+ВЫКЛ
 </p>
 
 
@@ -24,19 +24,18 @@ OFF
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="title">
-<span style="font-size:0.75em">THE</span><br>
-EVOLUTION<br>
-<span style="font-size:0.75em">OF TRUST</span>
+ЭВОЛЮЦИЯ<br>
+<span style="font-size:0.75em">ДОВЕРИЯ</span>
 </p>
 <p id="subtitle">
-playing time: 30 min &#8226; by nicky case, july 2017
+время игры: 30 мин &#8226; от nicky case, июль 2017
 </p>
 
 <p id="loading">
-loading...
+загрузка...
 </p>
 <p id="loading_done">
-PLAY &rarr;
+ИГРАТЬ &rarr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
@@ -47,29 +46,31 @@ PLAY &rarr;
 <!-- TODO: mention "game theory" early again... -->
 
 <p id="intro">
-During World War I, peace broke out.
+Во время Первой мировой войны, мир вспыхнул.
 <br><br>
 
-It was Christmas 1914 on the Western Front.<br>
-Despite strict orders <i>not</i> to chillax with the enemy, British<br>
-and German soldiers left their trenches, crossed No Man's Land,<br>
-and gathered to bury their dead, exchange gifts, and play games.
+Это было Рождество 1914 года на Западном фронте.<br>
+Несмотря на строгие приказы <i>не</i> расслабляться с противником,<br>
+британские и немецкие солдаты покинули свои окопы, пересекли Ничейную<br>
+землю и собрались хоронить свои трупы, обмениваться подарками и играть<br>
+в игры.
 <br><br>
 
-Meanwhile: it's 2017, the West has been at peace for decades, and<br>
-wow, we <i>suck</i> at trust. Surveys show that, over the past forty years,
-fewer and fewer people say they trust each other. So here's our puzzle:
+Между тем: это 2017 год, Запад находится в мире на протяжении десятилетий,<br>
+и, ничего себе, мы <i>сосём</i> в доверии. Опросы показывают, что за последние<br>
+сорок лет все меньше и меньше людей говорят, что они доверяют друг другу.<br>
+Итак, вот наша головоломка:
 <br><br>
 
-<b>Why, even in peacetime, do friends become enemies?<br>
-And why, even in wartime, do enemies become friends?</b>
+<b>Почему, даже в мирное время, друзья становятся врагами?<br>
+И почему, даже в военное время, враги становятся друзьями?</b>
 <br><br>
 
-I think <b>game theory</b> can help explain our epidemic of distrust –<br>
-and how we can fix it! So, to understand all this...
+Я думаю, <b>теория игр</b> может помочь объяснить нашу эпидемию недоверия –<br>
+и как мы можем это исправить! Итак, чтобы понять все это...
 </p>
 <p id="intro_button">
-...let's play a game. &rarr;
+...давай сыграем в игру. &rarr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
@@ -77,33 +78,33 @@ and how we can fix it! So, to understand all this...
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="label_you_cooperate">
-you<br>cooperate
+ты<br>сотрудничаешь
 </p>
 
 <p id="label_you_cheat">
-you<br>cheat
+ты<br>жульничаешь
 </p>
 
 <p id="label_they_cooperate">
-they<br>cooperate
+он<br>сотрудничает
 </p>
 
 <p id="label_they_cheat">
-they<br>cheat
+он<br>жульничает
 </p>
 
 <p id="label_you">
-you<br>↙
+ты<br>↙
 </p>
 <p id="label_them">
-other player<br>↘
+другой игрок<br>↘
 </p>
 
 <p id="oneoff_0_top">
 
-<b>THE GAME OF TRUST</b>
+<b>ИГРА ДОВЕРИЯ</b>
 <br>
-You have one choice.
+У тебя есть один выбор.
 In front of you is a machine: if you put a coin in the machine,
 the <i>other player</i> gets three coins – and vice versa.
 You both can either choose to COOPERATE (put in coin), or CHEAT (don't put in coin).
@@ -932,33 +933,33 @@ Published in <i>The Illustrated London News</i>, January 9, 1915.
 <p id="credits">
 <span class="credits">
 
-created by:<br>
+создан:<br>
 <span class="big">NICKY CASE</span><br>
-<a href="http://ncase.me/" target="_blank">play my other shtuff</a>
+<a href="http://ncase.me/" target="_blank">сыграй в другие мои штуки</a>
 •
-<a href="https://twitter.com/ncasenmare" target="_blank">follow my tweeter</a>
+<a href="https://twitter.com/ncasenmare" target="_blank">подпишись в twitter</a>
 <br>
-<a href="https://github.com/ncase/trust/#play-it-here-httpncasemetrust" target="_blank">download the music &amp; source code</a>
+<a href="https://github.com/ncase/trust/#play-it-here-httpncasemetrust" target="_blank">скачай музыку &amp; исходный код</a>
 
 <span class="divider"></span>
 
-based off robert axelrod's 1984 book,<br>
-<span class="big">"THE EVOLUTION OF COOPERATION"</span><br>
-<a href="notes" target="_blank">read my footnotes for this game</a>
+основано на книге Роберта Аксельрода в 1984 году,<br>
+<span class="big">"ЭВОЛЮЦИЯ СОТРУДНИЧЕСТВА"</span><br>
+<a href="notes" target="_blank">прочити мои сноски для этой игры</a>
 
 <span class="divider"></span>
 
-lots of love and thanks to<br>
-<span class="big">MY PATREON SUPPORTERS</span><br>
-<a href="peeps" target="_blank">see my drawings of 'em</a>
+много любви и благодарности<br>
+<span class="big">МОИМ СПОНСОРАМ С PATREON</span><br>
+<a href="peeps" target="_blank">взгляни на мои рисунки с ними</a>
 •
-<a href="https://www.patreon.com/ncase" target="_blank">throw coins at me on patreon &lt;3</a>
+<a href="https://www.patreon.com/ncase" target="_blank">брось в меня монеты на patreon &lt;3</a>
 
 <span class="divider"></span>
 
-p.s: want more learning-by-playing?<br>
-check out 
-<a href="http://explorabl.es/" target="_blank">explorable explanations</a>!
+p.s: хочешь больше обучения по играм?<br>
+проверь
+<a href="http://explorabl.es/" target="_blank">полезные объяснения</a>!
 
 </span>
 </p>
@@ -1056,37 +1057,37 @@ random
 </p>
 
 <p id="forgot_whos_who">
-(forgot who's who? hover buttons to see descriptions of each character!)
+(забыл, кто есть кто? наведи на кнопки, чтобы увидеть описания каждого персонажа!)
 </p>
 <p id="who_tft">
-Starts with Cooperate. Then, it simply repeats whatever YOU did in the last round.
+Начинает с Сотрудничества. Затем он просто повторяет все, что ТЫ делал в последнем раунде.
 </p>
 <p id="who_all_d">
-Always cheats.
+Всегда жульничает.
 </p>
 <p id="who_all_c">
-Always cooperates.
+Всегда сотрудничает.
 </p>
 <p id="who_grudge">
-Starts with Cooperate, and keeps cooperating until you cheat it even once.
-Afterwards, it always plays Cheat.
+Начинает с Сотрудничества и продолжает сотрудничать, пока ты не сжульничаешь хотя бы раз.
+Впоследствии он всегда Жульничает.
 </p>
 <p id="who_prober">
-Starts with: Cooperate, Cheat, Cooperate, Cooperate.
-Afterwards, if you ever retaliate with a Cheat, it plays like a Copycat.
-Otherwise, it plays like an Always Cheat.
+Начинает с: Сотрудничество, Жульничество, Сотрудничество, Сотрудничество.
+Впоследствии, если ты когда-либо Сжульничаешь, он будет играть как Copycat.
+В противном случае он играет как «Всегда жульничает».
 </p>
 <p id="who_tf2t">
-Starts with Cooperate.
-Only retaliates with a Cheat if you cheated it TWICE in a row.
+Начинает с Сотрудничества.
+Ответит только Жульничеством, если ты обманул его ДВА РАЗА подряд.
 </p>
 <p id="who_pavlov">
-Starts with Cooperate.
-Then, if you cooperated in last round, it repeats its last move (even if it was an accident).
-But if you cheated in last round, it switches its last move (even if it was an accident).
+Начинает с Сотрудничества.
+Затем, если ты сотрудничал в последнем раунде, он повторяет свой последний ход (даже если это был несчастный случай).
+Но если ты сжульничал в последнем раунде, он переключит свой последний ход (даже если это был несчастный случай).
 </p>
 <p id="who_random">
-Randomly cheats or cooperates with 50-50 chance
+Случайно жульничает или сотрудничает с вероятностью 50/50
 </p>
 
 
@@ -1095,51 +1096,51 @@ Randomly cheats or cooperates with 50-50 chance
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="label_cooperate">
-cooperate
+сотрудничать
 </p>
 
 <p id="label_cheat">
-cheat
+сжульничать
 </p>
 
 <p id="label_play">
-play
+играть
 </p>
 
 <p id="label_start">
-START
+СТАРТ
 </p>
 
 <p id="label_stop">
-STOP
+СТОП
 </p>
 
 <p id="label_step">
-step
+шаг
 </p>
 
 <p id="label_reset">
-reset
+сброс
 </p>
 
 <p id="label_population">
-population
+популяция
 </p>
 
 <p id="label_payoffs">
-payoffs
+выплаты
 </p>
 
 <p id="label_rules">
-rules
+правила
 </p>
 
 <p id="label_next">
-next &rarr;
+дальше &rarr;
 </p>
 
 <p id="label_continue">
-continue
+продолжить
 </p>
 
 
@@ -1148,32 +1149,32 @@ continue
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="chapter_intro">
-0. Introduction
+0. Введение
 </p>
 <p id="chapter_oneoff">
-1. One Game
+1. Одна игра
 </p>
 <p id="chapter_iterated">
-2. Repeated Game
+2. Повторная игра
 </p>
 <p id="chapter_tournament">
-3. One Tournament
+3. Один турнир
 </p>
 <p id="chapter_evolution">
-4. Repeated Tournament
+4. Повторный турнир
 </p>
 <p id="chapter_distrust">
-5. The Evolution of Distrust
+5. Эволюция недоверия
 </p>
 <p id="chapter_noise">
-6. Making Mistaeks
+6. Допущение ошибок
 </p>
 <p id="chapter_sandbox">
-7. Sandbox Mode
+7. Режим песочницы
 </p>
 <p id="chapter_conclusion">
-8. Conclusion
+8. Вывод
 </p>
 <p id="chapter_credits">
-9. Credits
+9. Авторство
 </p>
