:construction: Done draft version (need review)

--- a/words.html
+++ b/words.html
@@ -85,11 +85,11 @@
 </p>
 
 <p id="label_they_cooperate">
-он<br>доверяет
+он<br>доверился
 </p>
 
 <p id="label_they_cheat">
-он<br>обманывает
+он<br>обманул
 </p>
 
 <p id="label_you">
@@ -119,7 +119,7 @@
 </p>
 
 <p id="oneoff_1_cooperated">
-Увы, подставив другую щеку, тебя просто ударили!
+Увы, подставив другую щеку, тебя просто ударят!
 </p>
 
 <p id="oneoff_1_top">
@@ -134,7 +134,7 @@
 </p>
 
 <p id="oneoff_2_cheated">
-Вау, это так... а также правильный ответ!
+Вау, это... тоже правильный ответ!
 </p>
 
 <p id="oneoff_2_cooperated">
@@ -213,7 +213,7 @@
 
 <p id="character_tft">
 <b>КОПИКОТ:</b>
-Привет! Я начинаю Доверять, а потом просто буду копировать всё, что ты делал в последнем раунде. Мяу
+Привет! Я начну Сотрудничать, а потом просто буду копировать всё, что ты делал в последнем раунде. Мяу
 </p>
 
 <p id="character_all_d">
@@ -304,7 +304,7 @@
 неофициальный, секретный мир.
 </p>
 <p id="tournament_6">
-Они назвали это: <b>"живи и будешь жить" системой.</b>
+Они назвали это <b>системой "живи и будешь жить".</b>
 Проще говоря, ты не стреляешь в меня, я не стреляю в тебя. И это сработало, во многих местах!
 </p>
 <p id="tournament_7">
@@ -389,7 +389,7 @@
 (Мы будем игнорировать <span class="grudge">Злопамятных</span> и <span class="prober">Детективов</span>)
 <br><br>
 Мы собираемся сделать турнир-исключить-воспроизвести танец дюжину раз или около того.
-Сделаем ещё одну ставку! Кто, по твоему мнению, вигрыет <i>первый</i> турнир?
+Сделаем ещё одну ставку! Кто, по твоему мнению, выиграет <i>первый</i> турнир?
 <b>ДЕЛАЙТЕ ВАШИ СТАВКИ, СНОВА:</b>
 </p>
 
@@ -403,7 +403,7 @@
 Делает смысл, <span class="tft">Копикот</span> выиграл турнир в прошлый раз, почему он не может снова?...
 </p>
 <p id="evo_2">
-Посмотрим прав ли ты:
+Посмотрим, прав ли ты:
 </p>
 
 <p id="label_play_tournament">
@@ -425,7 +425,7 @@
 и их стало в 5 раз больше.
 </p>
 <p id="evo_3_tft">
-Увы, <span class="tft">Копикот</span> не выиграли – но им было не так плохо как <span class="all_c">Наивным</span>. Те были съедены <span class="all_d">Обманщиками</span>,
+Увы, <span class="tft">Копикоты</span> не выиграли – но им было не так плохо как <span class="all_c">Наивным</span>. Те были съедены <span class="all_d">Обманщиками</span>,
 чья численность увеличилась в 5 раз.
 </p>
 <p id="evo_3">
@@ -492,7 +492,7 @@
 </p>
 
 <p id="evo_10">
-(...этот результат достигается дале если добавить
+(...этот результат достигается даже если добавить
 <span class="grudge">Злопамятных</span> и <span class="prober">Детективов</span> назад.)
 </p>
 
@@ -508,8 +508,8 @@
 потому что все игроки кроме <span class="grudge">Злопамятных</span> и <span class="tft">Копикотов</span> 
 устранены, два ничьих.)
 <br><br>
-Итак, кажется, что математика теории игр нам говорит что-то вроде:
-что философия <span class="tft">Копикотов</span>,
+Итак, кажется, что математика теории игр нам говорит, что:
+философия <span class="tft">Копикотов</span>,
 "Поступай с другими так, как ты хотел, чтобы другие поступали с тобой", может быть не такой 
 <i>моральной</i> истиной, но и <i>математической</i> истиной.
 Однако...
@@ -519,7 +519,7 @@
 </p>
 
 <p id="evo_11">
-Вгляни вокруг. Мире полон полными придурками.
+Взгляни вокруг. Мир полон полными придурками.
 <br><br>
 Если <span class="tft">Копикот</span> является стратегией в этой повторяющейся игре доверия, которая настолько сильна -- что даже солдаты траншеи в Первой мировой войне самостоятельно "развили" аналогичную стратегию, называемую "живи и будь живым" -- почему тогда так много ненадежных людей?
 Что вызывает нашу эпидемию недоверия?
@@ -528,11 +528,6 @@
 До сих пор мы говорили только об изменениях в игроках:
 как насчет <i>изменений в игре?</i>
 Что может привести к...
-
-A clue's in that sentence itself. "In <i>this</i> repeated game of trust."
-So far we've only talked about change in the players:
-what about <i>a change in the game?</i>
-What could lead to...
 </p>
 <p id="evo_11_btn">
 ...эволюции <i>недоверия?</i>
@@ -543,85 +538,77 @@ What could lead to...
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="distrust_1">
-Before everything goes to heck, let's start with something nice!
-Here's a world filled entirely with <span class="all_c">Always Cooperates</span>,
-except for one <span class="all_d">Обманщики</span> and one <span class="tft">Copycat</span>.
+Прежде чем все пройдёт, давай начнём с чего-то приятного!
+Вот мир, полностью заполненный <span class="all_c">Наивными</span>, за исключением одного <span class="all_d">Обманщика</span> и одного <span class="tft">Копикота</span>.
 <br><br>
-Use the buttons on the right to <b>START</b> the sim,
-go through it <b>step-by-step</b>, or <b>reset</b> it. &rarr;
+Используй кнопки справа, чтобы <b>НАЧАТЬ</b> симуляцию,
+пройти по ней <b>шаг-за-шагом</b> или <b>сбросить</b> её. &rarr;
 </p>
 
 <p id="distrust_2">
-As you already know, <span class="tft">Copycat</span> wins handily in the long run,
-under our current rules!
+Как ты уже знаешь, <span class="tft">Копикот</span>
+выигрывает в долгосрочной перспективе,
+согласно нашим действующим правилам!
 <br><br>
-But that's under our <i>current</i> rules, which say that
-players play against each other for <i>10</i> rounds per match.
-Does <span class="tft">Copycat</span> still win at 7 rounds? 5 rounds? 3? 2? 1?
+Но это под нашими <i>нынешними</i> правилами, которые говорят, что игроки играют друг против друга 10 раундов за матч.
+<span class="tft">Копикот</span> все ещё выигрывает в 7 раундах? 5 раундах? 3? 2? 1?
 <br><br>
-<b>Change the number of rounds</b> with the slider below,
-then <b>START</b> the sim, and see what happens.
-Feel free to experiment!
+<b>Измени количество раундов</b> с помощью слайдера ниже, затем <b>НАЧНИ</b> симуляцию и посмотри, что произойдет.
+Не стесняйся экспериментировать!
 </p>
 
 <p id="distrust_2_end">
-once you're done playing around, click:
+как только ты закончишь играть, нажми:
 </p>
 
 <p id="distrust_3">
-As you saw, if you don't play enough rounds, (here: 5 or less)
-<span class="all_d">Обманщики</span> dominates.
+Как ты видишь, если ты не играешь достаточно раундов, (здесь: 5 или меньше)
+<span class="all_d">Обманщики</span> доминируют.
 <br><br>
-In 1985, when Americans were asked how many close friends they had,
-the most common answer was "three". In 2004, the most common answer was <i>"zero"</i>.
-We now have fewer friends across class, racial, economic, and political lines,
-because we have fewer friends -- <i>period.</i>
-And as you just discovered for yourself,
-<b>the fewer "repeat interactions" there are, the more distrust will spread.</b>
+В 1985 году, когда американцев спросили, сколько у них близких друзей,
+наиболее распространенным ответом было "три". В 2004 году, наиболее распространенным ответом было <i>"ноль"</i>.
+У нас теперь меньше друзей по классовым, расовым, экономическим и политическим направлениям, потому что у нас меньше друзей -- <i>период.</i> И как ты только что открыл для себя,
+<b>чем меньше "повторных взаимодействий", тем больше будет распространяться недоверие.</b>
 <br><br>
-(no, mass media doesn't count:
-it must be <i>two-way</i> interactions between <i>specific individuals</i>.)
+(Нет, средства массовой информации не учитываются:
+Это должно быть <i>двухстороннее</i> взаимодействие между <i>конкретными людьми</i>.)
 </p>
 <p id="distrust_3_btn">
-and oh, it gets worse... &rarr;
+и, ох, становится хуже... &rarr;
 </p>
 
 <p id="distrust_4">
-There's <i>another</i> way to breed distrust.
-Here are the "payoffs" for the trust game:
+Есть <i>другой</i> путь борьбы с недоверием.
+Вот "награды" для игры доверия:
 </p>
 <p id="distrust_4_2">
-With the normal payoffs, <span class="tft">Copycat</span> wins.
-But now, <b>change the "both cooperate" reward from +2 to +1</b>,
-then click <b>START</b>.
-Even though +1 is still <i>more</i> than the punishment for both cheating (0)...
-what happens?
+С нормальной наградой выигрывает <span class="tft">Копикот</span>.
+Но теперь <b>измени награду "оба доверяют" с +2 на +1</b>, затем нажми <b>СТАРТ</b>.
+Хотя +1 всё ещё <i>больше</i>, чем наказание за обоюдный обман (0)...
+что произойдёт?
 </p>
 <p id="distrust_4_note">
-feel free to play around with different payoffs!
-once you're done, click:
+Не стесняйся играть с разными наградами!
+Как только ты закончишь, нажми:
 </p>
 <p id="distrust_4_note_2">
-(simulating: 10 rounds per match)
+(симуляция: 10 раундов за матч)
 </p>
 
 <p id="distrust_5">
-The same thing happens:
-with a lower "win-win" reward, <span class="all_d">Обманщики</span> takes over.
-Game theory has two powerful ideas about this:
+Происходит то же самое:
+с низкой "беспроигрышной" наградой, <span class="all_d">Обманщики</span> берут верх.
+Теория игр имеет две сильные идеи об этом:
 <br><br>
-<b>"Zero-sum game".</b> This is the sadly common belief that a gain for "us"
-<i>must</i> come at a loss to "them", and vice versa.
+<b>"Игра с нулевой суммой".</b> Это, к сожалению, общее убеждение, что выигрыш для "нас" <i>должен</i> стать недопустимым "для них", и наоборот.
 <br><br>
-<b>"Non-zero-sum game".</b> This is when people make the hard effort
-to create a win-win solution! (or at least, avoid a lose-lose)
-Without the non-zero-sum game, <i>trust cannot evolve.</i>
+<b>"Игра с ненулевой суммой".</b> Это когда люди прилагают все усилия для создания беспроигрышного решения! (или, по крайней мере, избегают потери). Без игры с нулевой суммой <i>доверие не может развиваться.</i>
 <br><br>
-Speaking of which,
-let's now look at our third и final barrier to the evolution of trust...
+Говоря об этом,
+давай теперь посмотрим на наш третий и последний барьер на пути развития доверия...
 </p>
 <p id="distrust_5_btn">
-<s>Misteaks</s> Mistakes. &rarr;
+<s>Ошепки</s> Ошибки. &rarr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
@@ -686,8 +673,8 @@ let's now look at our third и final barrier to the evolution of trust...
 
 <p id="character_pavlov">
 <b>ПРОСТАК:</b><br>
-примет я попытаюсь начать сотрудничать.
-если ты доверишься в ответ, я сделаю <i>то же самое</i>, что и последний ход, даже если это ошибка.
+привет я попытаюсь начать сотрудничать.
+если ты доверишься в ответ, я сделаю <i>то же самое</i>, что и в последний ход, даже если это ошибка.
 если ты обманешь в ответ, я сделаю <i>противоположную вещь</i>, что и последний ход, даже если это ошибка.
 </p>
 
@@ -707,80 +694,71 @@ let's now look at our third и final barrier to the evolution of trust...
 <p id="noise_evo_1">
 Начнём с десятка
 <span class="all_c">Наивных</span>,
-против нашего старого победителя, справидливого <span class="tft">Копикота</span>,
+против нашего старого победителя, справедливого <span class="tft">Копикота</span>,
 и трёх новых персонажей:
 прощающего <span class="tf2t">Копикотёнка</span>,
 скучного <span class="pavlov">Простака</span>, и
 глупого <span class="random">Случайного</span>.
 <br><br>
-В каждом раунде матча у игроков есть небольшая вероятность совершить ошибку. (скажем, 5%)
+В каждом раунде у игроков есть небольшая вероятность совершить ошибку. (скажем, 5%)
 Кто, по твоему мнению, выйдет на первое место?
-<b>Подумай тщательно, затем СДЕЛАЙТЕ ВАШИ СТАВКИ:</b>
+<b>Хорошо подумай, затем ДЕЛАЙТЕ ВАШИ СТАВКИ:</b>
 </p>
 
 <p id="noise_evo_2">
-Alright, you bet [CHAR] wins. Let's find out!
-Use the controls to your left to <b>START</b> the sim in quick mode,
-or go through it <b>step-by-step</b>.
+Хорошо, ты делаешь ставку на победу [CHAR]. Давай выясним!
+Используй элементы управления слева, чтобы <b>НАЧАТЬ</b> быстрый запуск симуляции или пройти её <b>шаг-за-шагом</b>.
 </p>
 <p id="noise_evo_2_2_correct">
-You were correct -- 
+Ты был прав -- 
 </p>
 <p id="noise_evo_2_2_incorrect">
-Your bet was close, but no cigar -- 
+Ты был близок, но нет --
 </p>
 <p id="noise_evo_2_2">
-<span class="pavlov">Simpleton</span> wins!
-This is because <span class="pavlov">Simpleton</span> is actually capable of
-exploiting <span class="all_c">Наивные</span>. They both start cooperating,
-but if <span class="pavlov">Simpleton</span> makes a mistake and cheats,
-since <span class="all_c">Наивные</span> never retaliates,
-<i>it'll keep cheating them</i>.
+<span class="pavlov">Простак</span> победил!
+Это потому, что <span class="pavlov">Простак</span> на самом деле способен использовать <span class="all_c">Наивных</span>. Они оба начинают сотрудничать, но если <span class="pavlov">Простак</span> совершает ошибку и жульничает, когда как <span class="all_c">Наивные</span> никогда не ответят, <i>он будет обманывать их</i>.
 </p>
 <p id="noise_evo_2_2_btn">
-Now let's try...
+Теперь давай попробуем...
 </p>
 
 <p id="noise_evo_3">
-...the same thing as before, except instead of half-<span class="all_c">Наивные</span>,
-it's half-<span class="all_d">Обманщики</span>. It's a much <i>less</i> forgiving,
-<i>more</i> hostile environment.
+...то же самое, что и раньше, за исключением половины <span class="all_c">Наивных</span> с половиной <span class="all_d">Обманщиков</span>. Это гораздо <i>менее</i> прощающая, <i>более</i> враждебная среда.
 <br><br>
-Who do you think will win now? <b>Think, then PLACE YOUR BETS:</b>
+Кто, по твоему мнению, сейчас победит? <b>Подумай, затем ДЕЛАЙТЕ ВАШИ СТАВКИ:</b>
 </p>
 
 <p id="noise_evo_4">
-You bet on [CHAR]. Again, go through the simulation...
+Ты делаешь ставку на [CHAR]. Опять же, пройди симуляцию...
 </p>
 <p id="noise_evo_4_2_correct">
-You were right on the money -- 
+Ты был прав на деньги --
 </p>
 <p id="noise_evo_4_2_incorrect">
-Good guess, but someone else took the prize -- 
+Хорошая догадка, но кто-то другой взял приз --
 </p>
 <p id="noise_evo_4_2">
-<span class="tf2t">Copykitten</span> wins this time!
-That's surprising that with an even <i>meaner</i> starting population,
-<span class="tf2t">Copykitten</span>,
-a <i>more forgiving</i> version of <span class="tft">Copycat</span>,
-was the most successful! (note: <span class="tf2t">Copykitten</span> is so forgiving
-it doesn't even <i>entirely</i> wipe out <span class="tft">Copycat</span>. it shares room)
+<span class="tf2t">Копикотёнок</span> выиграл игру!
+Удивительно, что с ещё более <i>умеренной</i> стартовой популяцией,
+<span class="tf2t">Копикотёнок</span>,
+<i>более прощающая</i> версия <span class="tft">Копикота</span>,
+был более успешным! (примечание: <span class="tf2t">Копикотёнок</span> настолько снисходителен,
+что даже не <i>полностью</i> уничтожает <span class="tft">Копикота</span>. он делит комнату)
 <br><br>
-In this case, a bit of "miscommunication" (5% chance of mistake each round) could lead
-to more <i>forgiveness</i>. But is this true for <i>all</i> levels...
+В этом случае, небольшое "недопонимание" (5% вероятности ошибки каждый раунд) может привести
+к большему <i>прощению</i>. Но это правда для <i>всех</i> уровней...
 </p>
 <p id="noise_evo_4_2_btn">
-...of miscommunication?
+...недопонимания?
 </p>
 
 <p id="noise_evo_5">
-<b>Use the slider below to change the amount of "miscommunication", then hit START.</b>
-At 5%, <span class="tf2t">Copykitten</span> wins.
-What happens at 0%? Or 20%? Or 50%? (it only goes up to 50%,
-because at that point, <i>every</i> move is a coin flip) 
+<b>Используй слайдер внизу, чтобы изменить количество "недопонимания", затем нажми СТАРТ.</b>
+На 5% выигрывает <span class="tf2t">Копикотёнок</span>. Что происходит при 0%? Или 20%? Или 50%? (Он достигает только 50%, потому что в этот момент <i>каждое</i> движение это бросок монеты)
 </p>
 <p id="noise_evo_5_continue">
-When you're done playing around, click:
+Когда ты закончишь играть, нажми:
 </p>
 
 <p id="noise_evo_6">
@@ -794,9 +772,9 @@ When you're done playing around, click:
 это <i>немного</i> ведет к прощению, но <i>слишком много</i>,
 и это приводит к широко распространенному недоверию!
 Я думаю, что наши современные медиа-технологии,
-так как это помогло нам увеличить связь... еще больше увеличивая наше <i>недопонимание</i>.
+помогли нам увеличить связь... еще больше увеличивая наше <i>недопонимание</i>.
 <br><br>
-Наконец, давайте поэкспериментируем со <i>всеми</i> числами, ручками и ползунками.
+Наконец, давай поэкспериментируем со <i>всеми</i> числами, ручками и ползунками.
 Поиграем...
 </p>
 <p id="noise_evo_6_btn">
@@ -1061,7 +1039,7 @@ p.s: хочешь больше обучения по играм?<br>
 (забыл, кто есть кто? наведи на кнопки, чтобы увидеть описания каждого персонажа!)
 </p>
 <p id="who_tft">
-Начинает с Сотрудничества. Затем он просто повторяет все, что ТЫ делал в последнем раунде.
+Начинает с сотрудничества. Затем он просто повторяет все, что ТЫ делал в последнем раунде.
 </p>
 <p id="who_all_d">
 Всегда жульничает.
@@ -1070,25 +1048,25 @@ p.s: хочешь больше обучения по играм?<br>
 Всегда сотрудничает.
 </p>
 <p id="who_grudge">
-Начинает с Сотрудничества и продолжает сотрудничать, пока ты не сжульничаешь хотя бы раз.
-Впоследствии он всегда Жульничает.
+Начинает с сотрудничества и продолжает доверять, пока ты не обманешь хотя бы раз.
+Впоследствии он всегда жульничает.
 </p>
 <p id="who_prober">
-Начинает с: Доверия, Обмана, Доверия, Доверия.
-Впоследствии, если ты когда-либо Сжульничаешь, он будет играть как Копикот.
+Начинает с: доверия, обмана, доверия, доверия.
+Впоследствии, если ты когда-либо сжульничаешь, он будет играть как Копикот.
 В противном случае он играет как Обманщик.
 </p>
 <p id="who_tf2t">
-Начинает с Сотрудничества.
-Ответит только Жульничеством, если ты обманул его ДВА РАЗА подряд.
+Начинает с сотрудничества.
+Ответит только жульничеством, если ты обманул его ДВА РАЗА подряд.
 </p>
 <p id="who_pavlov">
-Начинает с Сотрудничества.
+Начинает с сотрудничества.
 Затем, если ты доверился в последнем раунде, он повторяет свой последний ход (даже если это была ошибка).
 Но если ты сжульничал в последнем раунде, он переключит свой последний ход (даже если это была ошибка).
 </p>
 <p id="who_random">
-Случайно доверяет или обманывает с вероятностью 50/50
+Случайно сотрудничает или жульничает с вероятностью 50/50.
 </p>
 
 
@@ -1137,11 +1115,11 @@ p.s: хочешь больше обучения по играм?<br>
 </p>
 
 <p id="label_next">
-дальше &rarr;
+далее &rarr;
 </p>
 
 <p id="label_continue">
-продолжить
+дальше
 </p>
 
 
@@ -1156,13 +1134,13 @@ p.s: хочешь больше обучения по играм?<br>
 1. Одна игра
 </p>
 <p id="chapter_iterated">
-2. Повторная игра
+2. Повторяющаяся игра
 </p>
 <p id="chapter_tournament">
 3. Один турнир
 </p>
 <p id="chapter_evolution">
-4. Повторный турнир
+4. Повторяющийся турнир
 </p>
 <p id="chapter_distrust">
 5. Эволюция недоверия
@@ -1171,7 +1149,7 @@ p.s: хочешь больше обучения по играм?<br>
 6. Допущение ошибок
 </p>
 <p id="chapter_sandbox">
-7. Режим песочницы
+7. Песочница
 </p>
 <p id="chapter_conclusion">
 8. Вывод
