:construction: Fix after merge

--- a/words.html
+++ b/words.html
@@ -68,15 +68,15 @@ Thanks again!
 <span style="font-size:0.75em">ДОВЕРИЯ</span>
 </p>
 <p id="subtitle">
+
 время игры: 30 мин &#8226; от ники кейс, июль 2017-го
 
 <!-- TRANSLATION NOTE: UNCOMMENT THE FOLLOWING & ADD YOUR OWN NAME! -->
-<!--
+
 <br>
-translated by YOUR NAME HERE
+перевёл максим лебедев
 &#8226;
 <a href="http://ncase.me/trust/">original English version</a>
--->
 
 </p>
 
@@ -900,8 +900,8 @@ one for the plural version, one for the singular version.
 3. МИНИМУМ НЕДОПОНИМАНИЯ
 </p>
 <p id="conclusion_3_a2">
-If the level of miscommunication is <i>too</i> high, trust breaks down.
-But when there's a little bit of miscommunication, it pays to be <i>more</i> forgiving.
+Если уровень недопонимания <i>слишком</i> высокий, доверие ломается.
+Но когда есть немного недопонимания, следует быть <i>более</i> снисходительным.
 </p>
 <p id="conclusion_4">
 Конечно, реальное доверие зависит от гораздо большего чем это.
