:globe_with_meridians: Index page translation

--- a/index.html
+++ b/index.html
@@ -27,32 +27,32 @@ Many thanks again!
 <head>
 
 	<!-- TO TRANSLATE: "title", "description" -->
-	<title>The Evolution of Trust</title>
-	<meta name="description" content="an interactive guide to the game theory of why &amp; how we trust each other"/>
+	<title>Эволюция доверия</title>
+	<meta name="description" content="интерактивное руководство теории игр о том, зачем и как мы доверяем друг другу"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- TO TRANSLATE: "name", "description" -->
-	<meta itemprop="name" content="The Evolution of Trust">
-	<meta itemprop="description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta itemprop="name" content="Эволюция доверия">
+	<meta itemprop="description" content="интерактивное руководство теории игр о том, зачем и как мы доверяем друг другу">
 	<meta itemprop="image" content="http://ncase.me/trust/social/thumbnail.png">
 
-	<!-- TO TRANSLATE: "name", "description" -->
+	<!-- TO TRANSLATE: "title", "description" -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="The Evolution of Trust">
-	<meta name="twitter:description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta name="twitter:title" content="Эволюция доверия">
+	<meta name="twitter:description" content="интерактивное руководство теории игр о том, зачем и как мы доверяем друг другу">
 	<meta name="twitter:creator" content="@ncasenmare">
 	<meta name="twitter:image" content="http://ncase.me/trust/social/thumbnail.png">
 
-	<!-- TO TRANSLATE: "name", "description" -->
-	<meta property="og:title" content="The Evolution of Trust">
+	<!-- TO TRANSLATE: "title", "description" -->
+	<meta property="og:title" content="Эволюция доверия">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/trust/">
 	<meta property="og:image" content="http://ncase.me/trust/social/thumbnail.png">
-	<meta property="og:description" content="an interactive guide to the game theory of why &amp; how we trust each other">
+	<meta property="og:description" content="интерактивное руководство теории игр о том, зачем и как мы доверяем друг другу">
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/slides.css">
@@ -60,7 +60,7 @@ Many thanks again!
 
 </head>
 <body>
-	<div id="preloader">loading...</div> <!-- TRANSLATE THIS -->
+	<div id="preloader">загрузка...</div> <!-- TRANSLATE THIS -->
 	<div style="display:none" id="main">
 		<div id="slideshow_container">
 			<div id="slideshow"></div>
@@ -70,15 +70,15 @@ Many thanks again!
 	<div style="display:none" id="footer">
 		<div id="sound" sound="on" class="no-select">
 			<div id="sound_icon"></div>
-			<div id="sound_on">ON</div> <!-- TRANSLATE THIS -->
-			<div id="sound_off">OFF</div> <!-- TRANSLATE THIS -->
+			<div id="sound_on">ВКЛ</div> <!-- TRANSLATE THIS -->
+			<div id="sound_off">ВЫКЛ</div> <!-- TRANSLATE THIS -->
 		</div>
 		<div id="select"></div>
 
 		<!-- TRANSLATE "title" & "text". Make sure it's less than 112 characters, for Twitter's sake -->
 		<!-- Also, "link" will be changed later to whatever the link for the translated version will be. -->
-		<sharing title="The Evolution of Trust"
-				 text="People no longer trust each other. Why? And how can we fix it? An interactive guide to the game theory of trust:"
+		<sharing title="Эволюция доверия"
+				 text="Люди больше не доверяют друг другу. Зачем? И как это исправить? Интерактивное руководство теории игр о доверии:"
 				 link="http://ncase.me/trust/"></sharing>
 
 	</div>
