--- a/peeps/index.html
+++ b/peeps/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <!-- META -->
-	<title>The Evolution of Trust: Supporters!</title>
+	<title>Эволюция доверия: Спонсоры!</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
@@ -19,9 +19,9 @@
 		<!-- Created by Nicky Case, & patreon link -->
 		<div class="credit_intro">
 			<p>
-			“The Evolution of Trust” was created thanks to the generosity
-			of my supporters <a target="_blank" href="https://www.patreon.com/ncase">on Patreon!</a>
-			Speaking of whom, here they are. THE COOLEST PEEPS:
+			“Эволюция доверия” была создана благодаря щедрости
+			моих спонсоров <a target="_blank" href="https://www.patreon.com/ncase">на Patreon!</a>
+			Говоря о них, вот они. КЛАССНЫЕ ЧУВАКИ:
 			</p>
 		</div>
 
@@ -321,7 +321,7 @@
 		<!-- Playtesters -->
 		<div>
 			<p style="text-align:center; font-size:25px; line-height:1.5em; margin-top:45px;">
-				and a special thanks to my friends who let me pester them to do playtests...
+				и особая благодарность моим друзьям, которые позволили мне приставать к ним для плейтестов...
 			</p>
 			<div class="credits_names">
 				Alex Dytrych<br>
@@ -347,8 +347,8 @@
 				Yohan John
 			</div>
 			<div style="text-align: center; color: #bbb; font-size: 18px; margin-top: 15px; margin-bottom: 100px;">
-				and thanks Sebastian Schellenberger &amp; Josh Triplett
-				for helping me fix some bugs, post-release!
+				и благодарю Sebastian Schellenberger и Josh Triplett
+				за то, что помогли мне исправить некоторые ошибки после релиза!
 			</div>
 		</div>
 
