:construction: Untranslate names and book-title to avoid misrepresentation

--- a/words.html
+++ b/words.html
@@ -69,12 +69,12 @@ Thanks again!
 </p>
 <p id="subtitle">
 
-время игры: 30 мин &#8226; от ники кейс, июль 2017-го
+время игры: 30 мин &#8226; nicky case, июль 2017
 
 <!-- TRANSLATION NOTE: UNCOMMENT THE FOLLOWING & ADD YOUR OWN NAME! -->
 
 <br>
-перевёл максим лебедев
+перевёл максим toby3d лебедев
 &#8226;
 <a href="http://ncase.me/trust/">original English version</a>
 
@@ -957,7 +957,7 @@ one for the plural version, one for the singular version.
 <span class="credits">
 
 авторство:<br>
-<span class="big">НИКИ КЕЙС</span><br>
+<span class="big">NICKY CASE</span><br>
 <a href="http://ncase.me/" target="_blank">сыграй в другие мои штуки</a>
 •
 <a href="https://twitter.com/ncasenmare" target="_blank">подпишись в twitter</a>
@@ -966,9 +966,9 @@ one for the plural version, one for the singular version.
 
 <span class="divider"></span>
 
-основано на книге Роберта Аксельрода в 1984 году,<br>
-<span class="big">"ЭВОЛЮЦИЯ СОТРУДНИЧЕСТВА"</span><br>
-<a href="notes" target="_blank">прочити мои сноски для этой игры</a>
+основано на книге robert axelrod в 1984 году,<br>
+<span class="big">"THE EVOLUTION OF COOPERATION"</span><br>
+<a href="notes" target="_blank">прочти мои сноски для этой игры</a>
 
 <span class="divider"></span>
 
